2007-01-16  Bruno coudoin  <bruno.coudoin@free.fr>

	* src/gcompris/board_config.c: removed gc_ignore_next_focus_out support
	  now pop up windows like in the wordprocessor combo no more switch GCompris
	  out of fullscreen.
	* src/gcompris/gcompris.c: -
	* src/gcompris/gcompris.h: -
	* configure.in: display binreloc compilation status in the summary
	* boards/colors/colors_bg.png: the white duck was too white on LCD screens
	 Jose reworked it.

2007-01-16  Bruno coudoin  <bruno.coudoin@free.fr>

	* boards/skins/gartoon/cursor_del.png: now as an arrow
	* boards/images/sponge.png: added from Franck art work
	* src/boards/python/redraw.py: Added audio feedback
	* src/boards/scale.c: -
	* src/boards/erase.c: -
	* src/boards/machpuzzle.c: -

2007-01-09  Bruno coudoin  <bruno.coudoin@free.fr>

	* boards/wordsgame/default-nl.xml: created by lode leroy
	* src/boards/menu2.c: fixed NULL printf (crashes on windows only)

2007-01-03  Bruno coudoin  <bruno.coudoin@free.fr>

	A few typo reported by Clytie.
	* src/boards/python/chat.py:
	* boards/chat.xml.in:
	* boards/connect4-2players.xml.in:
	* boards/connect4.xml.in:

	* src/gcompris/bar.c: New small feature on suggested by Lode Leroy, we can
	 now decrease the level by clicking on the right button.

2007-01-03  Bruno coudoin  <bruno.coudoin@free.fr>

	Added en_US in the list of user selectable locales.

	* src/gcompris/config.c

2007-01-01  Bruno coudoin  <bruno.coudoin@free.fr>

	Removed dependancie on libpopt, use glib's GOption instead
	* configure.in
	* src/gcompris/gcompris.c

2006-12-21  Bruno coudoin  <bruno.coudoin@free.fr>

	* boards/sounds/scroll.wav: added from Tuxpaint
	* src/boards/crane.c: (item_event), (arrow_event), (place_item),
	(select_item): added audio effects
	* src/boards/gtans_callbacks.c:
	(on_wdrawareagrande_configure_event),
	(on_wdrawareagrande_button_press_event),
	(on_wdrawareapetite_configure_event), (on_arrow_clicked),
	(on_show_clicked), (on_outline_clicked), (on_symetry_clicked),