@@ -1,3 +1,7 @@
+2007-01-17  Bruno coudoin  <bruno.coudoin@free.fr>
+
+	* src/boards/colors.c: now interrupt playing sounds if any
+
 2007-01-16  Bruno coudoin  <bruno.coudoin@free.fr>
 
 	* src/gcompris/board_config.c: removed gc_ignore_next_focus_out support
